fix label having a width too small

--- a/app/styles/components/challenge-item.css
+++ b/app/styles/components/challenge-item.css
@@ -4,4 +4,5 @@
 
 .challenge-item .challenge-proposal label {
   font-weight: 400;
+  width: 100%;
 }
